[refactor] Made SonarCloud recommended changes.